--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<title>React Webpack Example</title>
 </head>
 <body>
 <div id="container"></div>
