Added simple express server.

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>React Webpack Example</title>
+	<link rel="stylesheet" type="text/css" href="DOMAIN/_assets/main.css">
 </head>
 <body>
 <div id="container"></div>
-<script type="text/javascript" src="http://localhost:2992/_assets/main.js"></script>
+<script type="text/javascript" src="DOMAIN/_assets/main.js"></script>
 </body>
 </html>
