Server side render works.

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,6 @@
 	<title>React Webpack Example</title>
 </head>
 <body>
-<div id="container"></div>
+<div id="container">CONTENT</div>
 </body>
 </html>
